welcome.lessons.welcome.bat.bool1.NearHundred.scala.error
nearHundred:2: error: not found: value Maths
if (Maths.abs(n-100)<10 ||Maths.abs ( n-200)<10 ){
    ^nearHundred:2: error: type mismatch;
 found   : Unit
 required: Boolean
if (Maths.abs(n-100)<10 ||Maths.abs ( n-200)<10 ){
^